--- a/views/navbar_tutorial.jade
+++ b/views/navbar_tutorial.jade
@@ -6,15 +6,15 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='./home')  Microbial Pan-genome Analysis & Visualization  
+      a.navbar-brand(href='./home')  panX: pan-genome analysis & exploration
     .navbar-collapse.collapse
       ul.nav.navbar-nav
         li
           a(href='./') Applications
         li
-          a(href='pipeline') Pipeline
+          a(href='pipeline') Methods
         li.active
           a(href='tutorial') Tutorials
       ul.nav.navbar-nav.navbar-right
         li
-          a(href='#contacts')  Contact 
+          a(href='#contacts')  Contact
