--- a/views/layout.jade
+++ b/views/layout.jade
@@ -121,44 +121,45 @@ html
     include footer
     block content
     //- script(src='dist/all-edge.js')
-    script(src='javascripts/colors.js')
-    script(src='javascripts/species-list-info.js')
-    script(src='javascripts/third_party/d3.min.js')
-    //script(src='javascripts/meta-color-process.js')
-    script(src='javascripts/third_party/wNumb.js')
-    script(src='javascripts/third_party/nouislider.min.js')
-    script(src='javascripts/third_party/jquery.min.js')
-    script(src='javascripts/third_party/lodash.min.js')
-    script(src='javascripts/third_party/bootstrap.min.js')
-    script(src='javascripts/third_party/bootstrap-toggle.min.js')
-    script(src='javascripts/third_party/bootstrap-multiselect.js')
-    script(src='javascripts/third_party/jquery.bootstrap-autohidingnavbar.min.js')
-    script(src='javascripts/third_party/call-autohidingnavbar.js')
+    script(src='/dist/client_bundle.js')
+    // script(src='javascripts/colors.js')
+    // script(src='javascripts/species-list-info.js')
+    // //script(src='javascripts/third_party/d3.min.js')
+    // //script(src='javascripts/meta-color-process.js')
+    // script(src='javascripts/third_party/wNumb.js')
+    // script(src='javascripts/third_party/nouislider.min.js')
+    // script(src='javascripts/third_party/jquery.min.js')
+    // script(src='javascripts/third_party/lodash.min.js')
+    // script(src='javascripts/third_party/bootstrap.min.js')
+    // script(src='javascripts/third_party/bootstrap-toggle.min.js')
+    // script(src='javascripts/third_party/bootstrap-multiselect.js')
+    // script(src='javascripts/third_party/jquery.bootstrap-autohidingnavbar.min.js')
+    // script(src='javascripts/third_party/call-autohidingnavbar.js')
 
-    script(src='javascripts/third_party/d3-tip.min.js')
-    script(src='javascripts/third_party/crossfilter.min.js')
-    script(src='javascripts/third_party/dc.min.js')
+    // script(src='javascripts/third_party/d3-tip.min.js')
+    // script(src='javascripts/third_party/crossfilter.min.js')
+    // script(src='javascripts/third_party/dc.min.js')
 
-    //- script(src='javascripts/third_party/jquery.dataTables.min.js')
-    //- script(src='javascripts/third_party/dataTables.scrollingPagination.js')
-    //- script(src='javascripts/third_party/dataTables.bootstrap.min.js')
-    //- script(src='javascripts/third_party/dataTables.autoFill.min.js')
+    // //- script(src='javascripts/third_party/jquery.dataTables.min.js')
+    // //- script(src='javascripts/third_party/dataTables.scrollingPagination.js')
+    // //- script(src='javascripts/third_party/dataTables.bootstrap.min.js')
+    // //- script(src='javascripts/third_party/dataTables.autoFill.min.js')
 
-    script(src='javascripts/third_party/table_plugin/jquery.dataTables.min.js')
-    //script(src='javascripts/third_party/table_plugin/dataTables.buttons.min.js')
-    script(src='javascripts/third_party/table_plugin/dataTables.bootstrap.min.js')
-    script(src='javascripts/third_party/table_plugin/dataTables.colReorder.min.js')
+    // script(src='javascripts/third_party/table_plugin/jquery.dataTables.min.js')
+    // //script(src='javascripts/third_party/table_plugin/dataTables.buttons.min.js')
+    // script(src='javascripts/third_party/table_plugin/dataTables.bootstrap.min.js')
+    // script(src='javascripts/third_party/table_plugin/dataTables.colReorder.min.js')
 
-    script(src='javascripts/third_party/msa-new.js')
-    script(src='javascripts/third_party/tnt.tree.min.js')
-    script(src='javascripts/third_party/jquery.panzoom.min.js')
-    script(src='javascripts/data_path.js')
-    script(src='javascripts/tooltips.js')
-    script(src='javascripts/datatable-gc.js')
-    script(src='javascripts/tree-init.js')
-    script(src='javascripts/tree-view.js')
-    script(src='javascripts/chart_style.js')
-    script(src='javascripts/interact.js')
-    script(src='javascripts/meta-color-legend.js')
-    script(src='javascripts/render_viewer.js')
-    script(src='javascripts/datatable-meta.js')
+    // script(src='javascripts/third_party/msa-new.js')
+    // script(src='javascripts/third_party/tnt.tree.min.js')
+    // script(src='javascripts/third_party/jquery.panzoom.min.js')
+    // script(src='javascripts/data_path.js')
+    // script(src='javascripts/tooltips.js')
+    // script(src='javascripts/datatable-gc.js')
+    // script(src='javascripts/tree-init.js')
+    // script(src='javascripts/tree-view.js')
+    // script(src='javascripts/chart_style.js')
+    // script(src='javascripts/interact.js')
+    // script(src='javascripts/meta-color-legend.js')
+    // script(src='javascripts/render_viewer.js')
+    // script(src='javascripts/datatable-meta.js')
