trees work -- sort of

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -93,7 +93,8 @@ html
               br
               svg#coreTree_legend
             .col-md-10
-              #mytree1
+              #speciesTreeDiv
+                svg#speciesTree
         .col-md-6
           .alert.alert-info(role='alert')
             #genetree_title Gene tree (individual gene)
@@ -108,7 +109,8 @@ html
             #download_geneTree.col-md-1.btn_tooltip
           .row
             .col-md-10
-              #mytree2
+              #geneTreeDiv
+                svg#geneTree
             .col-md-2
               br
               br
