orientation switch button works

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -113,7 +113,7 @@ html
                 span#sizing-addon1.input-group-addon.primary.sm-customized Search strain
                 input.form-control.sm-customized(type='text', placeholder='NCBI accession number', aria-describedby='sizing-addon1',oninput='search(this.value)')
             #tree_rotate_div.col-md-1
-              input#tree_rotate(type='checkbox', data-toggle='toggle', data-style='ios', data-on='left-right', data-off='right-left', data-size='mini', data-onstyle='primary', data-offstyle='info')
+              input#geneTreeOrientation(type='checkbox', data-toggle='toggle', data-style='ios', data-on='left-right', data-off='right-left', data-size='mini', data-onstyle='primary', data-offstyle='info')
             .col-md-3.triplet-button-group
               button.triplet-button-control.triplet-button-toggle.geneTree(type='button') Layouts
                 span.fa.fa-plus.triplet-button(aria-hidden='true')
