add some icons to layout triplet

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -76,10 +76,11 @@ html
                   li.option.speciesTree
                     button#speciesTreeRadial.triplet-button-single.option1(type='button') Radial
                   li.option.speciesTree
-                    button#speciesTreeVertical.triplet-button-single.option2(type='button') Vertical
+                    button#speciesTreeVertical.triplet-button-single.option2(type='button')
+                      img(src='images/vertical.png')
                   li.option.speciesTree
                     button#speciesTreeUnroot.triplet-button-single.option3(type='button')
-                      img(src='images/unrooted_blue.png')
+                      img(src='images/unrooted.png')
               //-input#TreeViewSelect.btn_tooltip.input(type='checkbox', data-toggle='toggle', data-style='ios', data-on='Circular', data-off='Vertical', data-size='mini', data-onstyle='primary', data-offstyle='info', text='layout')
               input#LabelsToggle.btn_tooltip(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Label', data-off='Label', data-size='mini')
               input#InnerNodeToggle.btn_tooltip(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Node', data-off='Node', data-size='mini')
@@ -123,10 +124,11 @@ html
                 li.option.geneTree
                   button#geneTreeRadial.triplet-button-single.option1(type='button') Radial
                 li.option.geneTree
-                  button#geneTreeVertical.triplet-button-single.option2(type='button') Vertical
+                  button#geneTreeVertical.triplet-button-single.option2(type='button')
+                    img(src='images/vertical.png')
                 li.option.geneTree
                   button#geneTreeUnroot.triplet-button-single.option3(type='button')
-                    img(src='images/unrooted_blue.png')
+                    img(src='images/unrooted.png')
             //#dropdown_list2.col-md-4
             #download_geneTree.col-md-1.btn_tooltip
           .row
